# youtube-audio-player

./: .gitignore  Cargo.toml  ExampleConfig.toml  README.md  init.txt
migrations/2023-10-28-164048_db/: down.sql  up.sql
src/: args.rs  config.rs  handler.rs  main.rs
src/db/: database.rs  mod.rs  models.rs  schema.rs
src/db/ops/: mod.rs  playlist_ops.rs  playlist_song_ops.rs  song_ops.rs
src/mpd/: mpd_client.rs
src/utils/: utils.rs
src/youtube_api/: mod.rs  youtube_api.rs
