[package]
name = "youtube-audio-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
youtube_dl = "0.9.0"
diesel = { version = "2.1.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.1.0"
clap = { version = "4.4.7", features = ["derive"] }
mpd = "0.1.0"
serde = "^1.0"
anyhow = "1.0.75"
confy = "0.5.1"
reqwest = "0.11.22"
tokio = { version = "1", features = ["full"] }
